# multiomics-cnv-conditioned-poc

./: .gitignore  Makefile  README.md  RELEASE_NOTES_v0.7.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
audit/: ablation_synth_v0.2.md  ablation_v0.2.md  amplicon_strength_v0.5.md  amplicon_strength_v0.6.md  calibration_v0.5.md  cnv_prior_vs_baseline.json  cnv_prior_vs_baseline.md  cross_cohort_v0.3.md  cross_cohort_v0.4.md  external_validation_v0.6.md  gated_fusion_v0.5.md  gated_fusion_v0.6.md  ig_within_vs_cross_v0.4.md
data/: .gitignore  README.md  manifest.yaml
docs/: architecture.md  what-is-out-of-scope.md
scripts/: amplicon_strength_v0.5.py  amplicon_strength_v0.6.py  build_metabric_cohort_v2.py  check_english_only.py  compare_cnv_prior.py  download_metabric_cna.sh  download_tcga_cnv.sh  download_thirdcohort_probe.sh  eval_ablation_real.py  eval_calibration_v0.5.py  eval_cross_cohort.py  eval_cross_cohort_v0.4.py  eval_gated_fusion_v0.5.py  eval_gated_fusion_v0.6.py  external_validation_v0.6.py  ig_within_vs_cross_v0.4.py  run_ablation_synth.py
src/mocnv/: __init__.py  attribution.py  audit.py  calibration.py  canary.py  cnv.py  cohort.py  compare_integration.py  encoder.py  eval_ablation.py  model.py  priors.py  strength.py  synth.py  tracking.py
tests/: test_calibration.py  test_canary.py  test_cnv.py  test_cohort.py  test_compare_integration.py  test_model.py  test_priors.py  test_strength.py  test_synth.py
tests/fixtures/: canary.json
