[project]
name = "multiomics-cnv-conditioned-poc"
version = "0.0.0"
description = "Hypothesis-conditioned multi-omics with copy-number (CNV) as a third modality — an honest modality-ablation portrait."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "H. Ryan Kim" },
]
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "mlflow>=2.11.0",
    "torch>=2.3.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "captum>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mocnv"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
